<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark_background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:paddingRight="32dp"
        android:paddingLeft="32dp"
        android:paddingTop="48dp"
        android:paddingBottom="48dp"
        android:background="@drawable/receipt">

        <LinearLayout
            android:id="@+id/receipt_header_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/company_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/red"
                android:text="Recibo de pago"/>

            <TextView
                android:id="@+id/address_payment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Expedido en Jesus del Monte 37 L 16 Col. Ex Hacienda Jesús del Monte, Huixquilucan, Edo de Mex. C.P. 52764"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layerType="software"
                android:background="@drawable/dotted_line"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"/>

            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="1017 Vicente Gómez"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layerType="software"
                android:background="@drawable/dotted_line"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textStyle="bold"
                    android:text="@string/client"/>

                <Spinner
                    android:id="@+id/client_spinner"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:background="@drawable/transparent_button_background_red"/>

                <TextView
                    android:id="@+id/add_client_button"
                    android:clickable="true"
                    android:padding="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@android:drawable/ic_menu_add"
                    android:background="@drawable/transparent_button_background_red"
                    android:text="@string/add_client"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/receipt_header_list_quantity"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/receipt_header_list_sku"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/receipt_header_list_description"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/receipt_header_list_price"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/receipt_header_list_amount"/>
            </LinearLayout>

        </LinearLayout>


        <ListView
            android:id="@+id/products_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/receipt_footer_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layerType="software"
                android:background="@drawable/dotted_line"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/subtotal"/>

                <TextView
                    android:id="@+id/receipt_subtotal"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/activity_vertical_margin"
                    android:gravity="end"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/tax"/>

                <TextView
                    android:id="@+id/receipt_tax"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/activity_vertical_margin"
                    android:gravity="end"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textStyle="bold"
                    android:text="@string/total"/>

                <TextView
                    android:id="@+id/receipt_total"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/activity_vertical_margin"
                    android:textStyle="bold"
                    android:gravity="end"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layerType="software"
                android:background="@drawable/dotted_line"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/receipt_items_total"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/receipt_date_time"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/receipt_barcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/receipt_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/email_receipt_button"
                android:layout_width="0dp"
                android:layout_weight="45"
                android:layout_height="wrap_content"
                android:text="@string/email_receipt"
                android:textColor="@color/white"
                android:background="@drawable/button_background"/>

            <Space
                android:layout_width="0dp"
                android:layout_weight="10"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/print_receipt_button"
                android:layout_width="0dp"
                android:layout_weight="45"
                android:layout_height="wrap_content"
                android:text="@string/print"
                android:textColor="@color/white"
                android:background="@drawable/button_background"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>