<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bricks">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="128dp"
        android:layout_marginLeft="128dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/login_background">

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="47.5"
            android:layout_height="match_parent"
            android:src="@drawable/logo"
            android:scaleType="center"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="match_parent"
            android:src="@drawable/login_shadow"
            android:scaleType="center"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="47.5"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_hint"
                android:layout_marginRight="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:padding="8dp"
                android:textColor="#000"
                android:singleLine="true"
                android:background="@drawable/login_edit_text_background"
                android:imeOptions="actionNext"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password_hint"
                android:layout_marginRight="32dp"
                android:layout_marginLeft="32dp"
                android:padding="8dp"
                android:textColor="#000"
                android:background="@drawable/login_edit_text_background"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:textColor="@color/white"
                android:text="@string/log_in"
                android:paddingRight="64dp"
                android:paddingLeft="64dp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>