<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fragments_background"
    android:padding="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:background="@color/top_bar_background">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="45"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/filter_from"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:editable="false"
                android:padding="8dp"
                android:background="@color/white"
                android:hint="@string/from"/>

            <ImageButton
                android:id="@+id/calendar_from_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:adjustViewBounds="true"
                android:layout_marginStart="9dp"
                android:layout_marginLeft="9dp"
                android:background="@drawable/icon_calendary" />

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_weight="10"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="45"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/filter_to"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:editable="false"
                android:padding="8dp"
                android:background="@color/white"
                android:hint="@string/to"/>

            <ImageButton
                android:id="@+id/calendar_to_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:adjustViewBounds="true"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/icon_calendary" />

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/payments_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:listSelector="@drawable/list_item_background"/>

        <TextView
            android:id="@+id/empty_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/no_payments_on_list"
            android:drawableTop="@drawable/empty_box"
            android:drawablePadding="8dp"
            android:textSize="30sp"/>

    </FrameLayout>

</LinearLayout>